Specify Rust 2018 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["Dustin Farist <dustinfarist@users.noreply.github.com>"]
 name = "chip_8"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
 rand = "0.7.3"
